2021-03-19  Benjamin Yang  <be11ng@protonmail.com>

	* enh-366.patch: Move definition of `LISP_VERSION' from hints file
	`linux-lisp' to `patchlevel.h'.
	* mkpatch: Add `include/patchlevel.h' in patch.
	* nethack.el (nethack-installed-p): Check if the NetHack version
	and the lisp-patch version are up to date.
	(nethack-el-version): Bump to 0.11.0

2021-03-18  Benjamin Yang  <be11ng@protonmail.com>

	* enh-366.patch: Hints file passes `LISP_VERSION' which can be
	read from the `--version' command line flag.

2021-03-16  Benjamin Yang  <be11ng@protonmail.com>

	Add .nethackrc parsing.  Add support for menucolors and
	rudimentary hilite-status options.

	* nethack-options.el: New file.
	(nethack-options-file, nethack-options-fields-percents)
	(nethack-options-fields-text-matches, nethack-options-fields)
	(nethack-options-cond-major-troubles)
	(nethack-options-cond-minor-troubles)
	(nethack-options-cond-movement, nethack-options-cond-all)
	(nethack-options-fields-characteristics)
	(nethack-options-status-field-p, nethack-options-attributes)
	(nh-attr-face, nethack-options-color-face)
	(nethack-options-menucolors, nethack-options-get-menucolors)
	(nethack-options-hilites, nethack-options-get-hilites)
	(nethack-options-parse-status-behav, nethack-options-parse-attr)
	(nethack-options-attr-propertize)
	(nethack-options-substitute-conditions)
	(nethack-options-parse-hilite-status)
	(nethack-options-parse-menucolor, nethack-options-parse-option-1)
	(nethack-options-parse-option, nethack-options-parse)
	(nethack-options-set-p, nethack-options-equal)
	(nethack-options-status-hilite-results)
	(nethack-options-status-hilite, nethack-options-status-function)
	(nethack-options-highlight-menu, nethack-options): New functions.

	* enh-366.patch: Use `lisp_status_update'.
	(include/winlisp.h): New FDECL for `lisp_status_update'.
	(win/lisp/winlisp.c): New function `lisp_status_update'.  Some
	functionality has been accordingly moved from `lisp_putstr' to